balance sum, transaction and board by userid added
